--- a/index.html
+++ b/index.html
@@ -5,16 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator</title>
+    <script src="./calculator.js" defer> </script>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="calculator">
-        <div class="display"></div>
-        <div class="erase">
-            <div class="clear">CLEAR</div>
-            <div class="delete">DELETE</div>
+        <div id="display" class="display"></div>
+        <div id="erase" class="erase">
+            <input type="button" class="clear" value="clear">
+            <input type="button" class="delete" value="delete">
         </div>
-        <div class="buttons">
-            
+        <div id="buttons" class="buttons">
+            <input type="button" class="7" value="7">
+            <input type="button" class="8" value="8">
+            <input type="button" class="9" value="9">
+            <input type="button" class="%" value="%">
+            <input type="button" class="4" value="4">
+            <input type="button" class="5" value="5">
+            <input type="button" class="6" value="6">
+            <input type="button" class="x" value="x">
+            <input type="button" class="1" value="1">
+            <input type="button" class="2" value="2">
+            <input type="button" class="3" value="3">
+            <input type="button" class="-" value="-">
+            <input type="button" class="." value=".">
+            <input type="button" class="0" value="0">
+            <input type="button" class="=" value="=">
+            <input type="button" class="+" value="+">
+
         </div>
     </div>
 </body>
