Add some more logic

--- a/index.html
+++ b/index.html
@@ -11,28 +11,30 @@
 <body>
     <div class="calculator">
         <div id="display" class="display"></div>
-        <div id="erase" class="erase">
-            <input type="button" class="clear" value="clear">
-            <input type="button" class="delete" value="delete">
-        </div>
-        <div id="buttons" class="buttons">
-            <input type="button" class="7" value="7">
-            <input type="button" class="8" value="8">
-            <input type="button" class="9" value="9">
-            <input type="button" class="%" value="%">
-            <input type="button" class="4" value="4">
-            <input type="button" class="5" value="5">
-            <input type="button" class="6" value="6">
-            <input type="button" class="x" value="x">
-            <input type="button" class="1" value="1">
-            <input type="button" class="2" value="2">
-            <input type="button" class="3" value="3">
-            <input type="button" class="-" value="-">
-            <input type="button" class="." value=".">
-            <input type="button" class="0" value="0">
-            <input type="button" class="=" value="=">
-            <input type="button" class="+" value="+">
+        <div class="allbuttons" id="allbuttons">
+            <div id="erase" class="erase">
+                <button class="clear">clear</button>
+                <button class="delete">delete</button>
+            </div>
+            <div id="calcbuttons" class="buttons">
+                <button value="7">7</button>
+                <button value="8">8</button>
+                <button value="9">9</button>
+                <button value="/">/</button>
+                <button value="4">4</button>
+                <button value="5">5</button>
+                <button value="6">6</button>
+                <button value="x">x</button>
+                <button value="1">1</button>
+                <button value="2">2</button>
+                <button value="3">3</button>
+                <button value="-">-</button>
+                <button value=".">.</button>
+                <button value="0">0</button>
+                <button value="=">=</button>
+                <button value="+">+</button>
 
+            </div>
         </div>
     </div>
 </body>
