--- a/index.html
+++ b/index.html
@@ -10,29 +10,32 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="display" class="display"></div>
+        <div id="display" class="display">
+            <div id="history"></div>
+            <div id="currentdisplay"></div>
+        </div>
         <div class="allbuttons" id="allbuttons">
             <div id="erase" class="erase">
-                <button class="clear">clear</button>
-                <button class="delete">delete</button>
+                <button data-type="clear" class="clear">clear</button>
+                <button data-type="delete" class="delete">delete</button>
             </div>
             <div id="calcbuttons" class="buttons">
-                <button value="7">7</button>
-                <button value="8">8</button>
-                <button value="9">9</button>
-                <button value="/">/</button>
-                <button value="4">4</button>
-                <button value="5">5</button>
-                <button value="6">6</button>
-                <button value="x">x</button>
-                <button value="1">1</button>
-                <button value="2">2</button>
-                <button value="3">3</button>
-                <button value="-">-</button>
-                <button value=".">.</button>
-                <button value="0">0</button>
-                <button value="=">=</button>
-                <button value="+">+</button>
+                <button data-type="number" value="7">7</button>
+                <button data-type="number"  value="8">8</button>
+                <button data-type="number"  value="9">9</button>
+                <button class="operator" data-type="operator"  value="/">/</button>
+                <button data-type="number"  value="4">4</button>
+                <button data-type="number"  value="5">5</button>
+                <button data-type="number"  value="6">6</button>
+                <button class="operator"  data-type="operator"  value="x">x</button>
+                <button data-type="number"  value="1">1</button>
+                <button data-type="number"  value="2">2</button>
+                <button data-type="number"  value="3">3</button>
+                <button class="operator"  data-type="operator"  value="-">-</button>
+                <button data-type="decimal"  value=".">.</button>
+                <button class="operator"  data-type="operator"  value="0">0</button>
+                <button class="equals"  data-type="equal"  value="=">=</button>
+                <button class="operator"  data-type="operator" value="+">+</button>
 
             </div>
         </div>
