Fix the data attributes and update classes

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <button data-type="number"  value="3">3</button>
                 <button class="operator"  data-type="operator"  value="-">-</button>
                 <button data-type="decimal"  value=".">.</button>
-                <button class="operator"  data-type="operator"  value="0">0</button>
-                <button class="equals"  data-type="equal"  value="=">=</button>
-                <button class="operator"  data-type="operator" value="+">+</button>
+                <button data-type="number"  value="0">0</button>
+                <button data-type="equal"  value="=">=</button>
+                <button data-type="operator" value="+">+</button>
 
             </div>
         </div>
